--- a/Smugli/Views/Index.htm
+++ b/Smugli/Views/Index.htm
@@ -48,6 +48,7 @@
                 Predict
             </button>
             </form>
+            <p>Link: <span id="predictionLink" data-bind="text: predictionLink"></span></p>
         </article>
     </div>
     <div id="footer-container">
@@ -63,6 +64,8 @@
     </script>
     <script src="http://github.com/downloads/SteveSanderson/knockout/knockout-1.2.1.js"
         type="text/javascript"></script>
+    <script type="text/javascript" src="/Scripts/libs/URI.js"></script>
+    <script type="text/javascript" src="/Scripts/libs/json2.js"></script>
     <script src="/Scripts/Prediction.js" type="text/javascript"></script>
     <!--[if lt IE 7 ]>
 	<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
